--- a/style.css
+++ b/style.css
@@ -97,15 +97,28 @@ th{
     font-size: 12px;
     margin-left: 5px;
 }
+.ml-r{
+    margin-left: 10px;
+    display: flex;
+    gap: 10px;
+}
+.filter-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
 
-.up-arrow {
-    color: green;
 }
 
-.down-arrow {
-    color: red;
+.filter-container label {
+    display: inline-block;
+    font-weight: 700;
 }
-
+#search-button {
+    width: 120px;
+}
+.filter .form-control {
+    width: auto;}
+    
 /* Mobile View */
 @media (max-width: 768px) {
     table, thead, tbody, th, td, tr {
